--- a/08-HTML/homework/cv.html
+++ b/08-HTML/homework/cv.html
@@ -8,18 +8,24 @@
     <link rel="stylesheet" href="stylecv.css">
 </head>
 <body>
-    <div><h1>CV Walter Gabriel Tell</h1><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSl6YHzKAQn5Lk0Q4N8qQYAVbtr63IRHnJmHm2XCfiKfa2V7EpaI2WwyYpzkr6H_KRW&usqp=CAU" alt=""></div>
-    <p>Fecha de Nacimiento: 28/01/1985</p>
-    <p>DNI: 31425290</p>
-    <p>Lugar de residencia: San Miguel de Tucuman</p>
-    <p>Numero de Contacto: 3816664151</p>
-
-<div>
+    <h1>CV Walter Gabriel Tell</h1>
+    <header id="contenedor">
+        <div id="img">
+            <img id="foto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSl6YHzKAQn5Lk0Q4N8qQYAVbtr63IRHnJmHm2XCfiKfa2V7EpaI2WwyYpzkr6H_KRW&usqp=CAU" alt="open to work"></div>
+        </div>
+        <div id="datos">
+            <p>Fecha de Nacimiento: 28/01/1985</p>
+            <p>DNI: 31425290</p>
+            <p>Lugar de residencia: San Miguel de Tucuman</p>
+            <p>Numero de Contacto: 3816664151</p>
+        </div>
+    </header> 
+    <div>
         <h2>Educacion:</h2>
         <p>
-            Universidad Nacional de TucumánUniversidad Nacional de Tucumán
-            Ingeniero en ComputaciónIngeniero en Computación
-            2003 - 20062003 - 2006
+            Universidad Nacional de Tucumán
+            Ingeniero en Computación
+            2003 - 2006
             Titulación: Universitario Incompleto</p>
         <p>Universidad Tecnológica Nacional Facultad Regional Resistencia Chaco - UTN FRReUniversidad Tecnológica Nacional Facultad Regional Resistencia Chaco - UTN FRRe
             Programacion web con Javascript, Programación informática, aplicaciones específicasProgramacion web con Javascript, Programación informática, aplicaciones específicas
@@ -65,7 +71,13 @@
             <li>HTML5</li></ul>
          </div>
 
-<div><h2>Hobbies</h2>
+<div id="hobbies"><h2>Hobbies</h2>
+    <ul>
+        <li>Musico</li>
+        <li>viajar</li>
+        <li>computacion</li>
+        <li>diseño</li>
+    </ul>
 
 </div>
 
